Secure restful users API using ADMIN role